<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".SummaryActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:src="@drawable/vuv_hr_image"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/line1"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewImePrez"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:text="@string/imePrez"
        android:gravity="center"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/viewImePrez"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="8pt"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintLeft_toRightOf="@+id/textViewImePrez"
        />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/viewImePrez"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewDatum"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:text="@string/datum"
        android:gravity="center"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/viewDatum"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="8pt"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintLeft_toRightOf="@+id/textViewDatum"
        />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/viewDatum"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewImeProf"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:text="@string/imeProf"
        android:gravity="center"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/viewProf"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="8pt"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintLeft_toRightOf="@+id/textViewImeProf"
        />

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/viewProf"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewAkaGod"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:text="@string/akadGod"
        android:gravity="center"
        android:textSize="7pt"
        />

    <TextView
        android:id="@+id/viewAkaGod"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="8pt"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        app:layout_constraintLeft_toRightOf="@+id/textViewAkaGod"
        />

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/viewAkaGod"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewBrojPred"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/line5"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:text="@string/brojPred"
        android:gravity="center"
        android:textSize="7pt"
        />

    <TextView
        android:id="@+id/viewBrojPred"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="8pt"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line5"
        app:layout_constraintLeft_toRightOf="@+id/textViewBrojPred"
        />

    <View
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/viewBrojPred"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewBrojLV"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/line7"
        app:layout_constraintTop_toTopOf="@+id/line6"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/brojLv"
        android:gravity="center"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/viewBrojLV"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="8pt"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line6"
        app:layout_constraintLeft_toRightOf="@+id/textViewBrojLV"
        />

    <View
        android:id="@+id/line7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/viewBrojLV"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewPredmet"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/line8"
        app:layout_constraintTop_toTopOf="@+id/line7"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/predmet"
        android:gravity="center"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/viewPredmet"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="8pt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textViewBrojLV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line7" />

    <View
        android:id="@+id/line9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/viewPredmet"
        app:layout_constraintBottom_toTopOf="@id/btnDalje"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnDalje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:text="POČETNA"
        />

    <View
        android:id="@+id/line8"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/line9"
        app:layout_constraintTop_toTopOf="@id/line1"
        android:background="#c0c0c0"
        android:layout_marginEnd="75dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>